BREAKING CHANGE: New mp3 and vorbis libraries